hledger/test/errors/undeclared-payee.j
# hledger check payees

account a
commodity A

1/1 p
  (a)  A 1
